<resources>
    <string name="app_name">AgriGuard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AgriGuard</string>
    <string name="nav_header_subtitle">Hello AgriGuard</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_capture">Live Capture</string>

    <string name="menu_home">Home</string>
    <string name="menu_library">Wiki</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_contactus">Contact Us</string>
</resources>