<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bkimp.life.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.bkimp.life.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.bkimp.life.ui.notifications.NotificationsFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_capture"
        android:name="com.bkimp.life.ui.capture.CaptureFragment"
        android:label="@string/title_capture"
        tools:layout="@layout/fragment_capture" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="com.bkimp.life.ui.tutorial.TutorialFragment"
        android:label="@string/menu_tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.bkimp.life.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />
</navigation>